--- a/LaTeX/GraphletThesis/setup.tex
+++ b/LaTeX/GraphletThesis/setup.tex
@@ -42,7 +42,7 @@
 %\usepackage[english]{babel} % babel system, adjust the language of the content
 \usepackage{polyglossia}
 \setdefaultlanguage{spanish}
-\setotherlanguage{english}
+\setotherlanguages{english,russian}
 
 \PassOptionsToPackage{% setup clean thesis style
     figuresep=colon,%
@@ -78,3 +78,4 @@
 % Other Packages
 % **************************************************
 \usepackage{scrhack}
+\usepackage{svg}
